# trophybot

./: .gitignore  README.md  cloudbuild.yaml  conftest.py  deploy.py  main.py  pyproject.toml  pytest.ini  requirements.txt
src/trophybot/: __init__.py  __main__.py  bot.py  dice.py
src/trophy‑bot/: __init__.py
tests/: test_combat_command.py  test_commands.py  test_dice_engine.py  test_interactions.py
