[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "trophybot"
version = "0.2.1"
description = "Discord dice roller for Trophy"
authors = ["Kyle Maxwell <kylemxl@icloud.com>"]
packages = [{ include = "trophybot", from = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0"
flask = "^2.2.5"
requests = "^2.31.0"
pynacl = "^1.5.0"
functions-framework = "^3.0.0"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"          # async test harness
coverage = "^7.5"
ruff = "^0.11"                    # linter/formatter
mypy = "^1.10"
pre-commit = "^3.7"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "B", "I", "D", "C"]
ignore = ["E203", "D203", "D212"]
extend-ignore = ["D100", "D205"]         # e.g. skip missing docstring for modules
exclude = ["build/", "docs/"]    
per-file-ignores = { "tests/*" = ["D", "S101"] }      # relax docstring & security in tests

[tool.poetry.scripts]
trophybot = "trophybot.bot:main"
